RESOLVED FIXED216990
[LFC][IFC] Incorrect width value is set for partially collapsible trailing space
https://bugs.webkit.org/show_bug.cgi?id=216990
Summary [LFC][IFC] Incorrect width value is set for partially collapsible trailing space
alan
Reported 2020-09-25 13:29:33 PDT
for letter-spacing
Attachments
Patch (4.16 KB, patch)
2020-09-25 13:33 PDT, alan
no flags
Patch (4.14 KB, patch)
2020-09-25 13:40 PDT, alan
no flags
alan
Comment 1 2020-09-25 13:33:16 PDT
alan
Comment 2 2020-09-25 13:40:32 PDT
EWS
Comment 3 2020-09-25 14:47:19 PDT
Committed r267596: <https://trac.webkit.org/changeset/267596> All reviewed patches have been landed. Closing bug and clearing flags on attachment 409733 [details].
Radar WebKit Bug Importer
Comment 4 2020-09-25 14:48:15 PDT
Truitt Savell
Comment 5 2020-09-28 09:38:06 PDT
It looks like the new test fast/layoutformattingcontext/horizontal-sizing-with-trailing-letter-spacing.html added in https://trac.webkit.org/changeset/267596/webkit' is crashing on Mac Debug wk2 History: https://results.webkit.org/?suite=layout-tests&test=fast%2Flayoutformattingcontext%2Fhorizontal-sizing-with-trailing-letter-spacing.html Application Specific Information: CRASHING TEST: fast/layoutformattingcontext/horizontal-sizing-with-trailing-letter-spacing.html Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.JavaScriptCore 0x000000033db2fa9e WTFCrash + 14 (Assertions.cpp:295) 1 com.apple.WebCore 0x000000031de425fb WTFCrashWithInfo(int, char const*, char const*, int) + 27 2 com.apple.WebCore 0x00000003217aa39c WebCore::Layout::LayoutContext::verifyAndOutputMismatchingLayoutTree(WebCore::Layout::LayoutState const&, WebCore::RenderView const&) + 300 3 com.apple.WebCore 0x0000000321b4c12f WebCore::FrameViewLayoutContext::layoutUsingFormattingContext() + 767 (FrameViewLayoutContext.cpp:87) 4 com.apple.WebCore 0x0000000321b2d8dd WebCore::FrameViewLayoutContext::layout() + 2141 (FrameViewLayoutContext.cpp:234)
Note You need to log in before you can comment on or make changes to this bug.