[LFC][IFC] Incorrect width value is set for partially collapsible trailing space https://bugs.webkit.org/show_bug.cgi?id=216990

Reviewed by Simon Fraser.

Source/WebCore:

Use the letter-spacing value as the collapsible space.

Test: fast/layoutformattingcontext/horizontal-sizing-with-trailing-letter-spacing.html

* layout/inlineformatting/InlineLine.cpp:
(WebCore::Layout::Line::appendTextContent):

LayoutTests:

* fast/layoutformattingcontext/horizontal-sizing-with-trailing-letter-spacing-expected.html: Added.
* fast/layoutformattingcontext/horizontal-sizing-with-trailing-letter-spacing.html: Added.


Canonical link: https://commits.webkit.org/229769@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267596 268f45cc-cd09-0410-ab3c-d52691b4dbfc